--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "stripe": "^8.209.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0"
   }
