--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "sanity-ecommerce",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -22,8 +22,12 @@
     "stripe": "^8.209.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.18.6",
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0"
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^12.1.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
